usuarios/02-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: #{name}#
  name: #{name}#
  namespace: #{namespace}#-#{env}#
spec:
  ports:
  - name: http
    port: 80
  selector:
    app.kubernetes.io/instance: #{name}#
---
