usuarios/03-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/configuration-snippet: |
          rewrite /#{name}#/(.*) /$1 break;
  name: #{name}#-ingress
  namespace: #{namespace}#-#{env}#
spec:
  rules:
  - host: #{host}#-#{env}#.#{domain}#
    http:
      paths:
      - backend:
          service:
            name: #{name}#
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - tarjeta-#{host}#-#{env}#.#{domain}#
---
